--- a/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+
+<div class="container-fluid bg-login d-flex align-items-center justify-content-center flex-column ">
+
+  <h1 class="animated fadeInDown">Iniciar Sesion</h1>
+
+  <form class="animated fadeInUp" #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+    <div class="mb-3 row">
+      <label for="email" class="form-label ">Email</label>
+      
+        <input
+          type="text"
+          class="form-control"
+          name="email"
+          #email="ngModel"
+          [(ngModel)]="userService.selectedUser.email"
+        />
+      
+    </div>
+
+    <div class="mb-3 row">
+      <label for="password" class="form-label "
+        >Contraseña</label
+      >
+      
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          #password="ngModel"
+          [(ngModel)]="userService.selectedUser.password"
+        />
+      
+    </div>
+
+    <button class="btn btn-warning ms-5 ms-5" >Iniciar sesion</button>
+  </form>
+
+  
+</div>
