anexo navbar,home,footer

--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
@@ -1,1 +1,147 @@
-<p>home works!</p>
+<!-- <head>
+	<meta charset="UTF-8">
+	<title>Automatic Image Slider in HTML CSS</title>
+	<link href="style.css" rel="stylesheet">
+</head> -->
+<body>
+
+
+
+	<div class="wrapper ">
+		<div style="background-image:url(../../../assets/img/fondofinal.jpg)">
+			
+			
+			<section class="position-absolute top-50 start-50 translate-middle">
+
+				<div class="d-flex flex-wrap justify-content-center">
+			
+					<div class="card d-flex " style="width: 700px; ">
+						
+						<h1 class="titulos">Desarrolla tus capacidades</h1>
+						<img src="../../../assets/img/imagen2.jpg" class="card-img-down" alt="...">
+						
+					</div>
+			
+				</div>
+			
+			</section>		
+	
+	
+			
+		
+		</div>
+    	<div style="background-image:url(../../../assets/img/fondofinal.jpg)">
+			
+			<section class="position-absolute top-50 start-50 translate-middle">
+
+				<div class="d-flex flex-wrap justify-content-center">
+			
+					<div class="card" style="width: 700px;">
+						<h1 class="titulos">Aprende con nosotros</h1>
+						<img src="../../../assets/img/codigo.jpg" class="card-img-down" alt="...">
+						
+					</div>
+			
+				</div>
+			
+			</section>		
+	
+	
+		</div>
+      	<div style="background-image:url(../../../assets/img/fondofinal.jpg)">
+		
+			
+			<section class="position-absolute top-50 start-50 translate-middle">
+
+				<div class="d-flex flex-wrap justify-content-center">
+			
+					<div class="card" style="width: 700px;">
+						<h1 class="titulos">Desarrolla tu ingenio</h1>
+						<img src="../../../assets/img/imagen3.jpg" class="card-img-down" alt="...">
+						
+					</div>
+			
+				</div>
+			
+			</section>
+		
+		
+		
+		</div>
+        <div style="background-image:url(../../../assets/img/fondofinal.jpg)">
+			
+			<section class="position-absolute top-50 start-50 translate-middle">
+
+				<div class="d-flex flex-wrap justify-content-center">
+			
+					<div class="card" style="width: 700px;">
+						<h1 class="titulos">Todos los lenguajes</h1>
+						<img src="../../../assets/img/carusel-1.jpg" class="card-img-down" alt="...">
+						
+					</div>
+			
+				</div>
+			
+			</section>
+		
+		
+		
+		</div>
+        <div style="background-image:url(../../../assets/img/fondofinal.jpg)">
+			
+			<section class="position-absolute top-50 start-50 translate-middle">
+
+				<div class="d-flex flex-wrap justify-content-center">
+			
+					<div class="card" style="width: 700px;">
+						<h1 class="titulos">En un solo lugar</h1>
+						<img src="../../../assets/img/clase.jpg" class="card-img-down" alt="...">
+						
+					</div>
+			
+				</div>
+			
+			</section>
+		
+		
+		</div>	  
+	</div> 
+	<div class="d-grid gap-2 ">
+		<button class="btn btn-warning" type="button">Pulsa para iniciar</button>
+		
+	  </div>
+
+	
+
+	<!-- burbujas-->
+
+	<div class="burbujas">
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+		<div class="burbuja"></div>
+	</div>
+
+
+	
+
+
+
+
+
+	
+
+
+
+
+
+
+
+</body>
+
