--- a/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
@@ -1,1 +1,112 @@
-<p>footer works!</p>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center">
+        <!-- Grid container -->
+        <div class="container p-4">
+      
+          <!-- Section: Social media -->
+          <section class="mb-4">
+            <!-- Facebook -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f">
+
+              <img
+                  src="../../../assets/img/facebook"
+                  height="50"
+                  alt="MDB Logo"
+                  loading="lazy"
+                  />	
+            </i></a>
+      
+            <!-- Twitter -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter">
+              <img
+              src="../../../assets/img/twiter.png"
+              height="50"
+              alt="MDB Logo"
+              loading="lazy"
+              />	
+            </i></a>
+      
+            <!-- Instagram -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram">
+              <img
+              src="../../../assets/img/instagran.png.crdownload"
+              height="50"
+              alt="MDB Logo"
+              loading="lazy"
+              />	
+            </i></a>
+      
+            <!-- Linkedin -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca in" href="#!" role="button"><i class="fab fa-linkedin-in">
+            <img
+            src="../../../assets/img/linkedin.jpg"
+            height="50"
+            alt="MDB Logo"
+            loading="lazy"
+            />	
+            </i></a>
+            
+          </section>
+          <!-- Section: Social media -->
+      
+      
+         
+          <!-- Section: Text -->
+          <section class="mb-4">
+            <p>
+              La tecnología no es nada. Lo importante es que tengas fe en la gente,
+               que sean básicamente buenas e inteligentes, y si les das herramientas, 
+               harán cosas maravillosas con ellas.-Steve Jobs.
+            </p>
+          </section>
+          <!-- Section: Text -->
+      
+      
+         
+      
+        </div>
+        <!-- Grid container -->
+      
+         <!-- Section: Form -->
+         <section class="">
+          <form action="">
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Grid column-->
+              <div class="col-auto">
+                <p class="pt-2">
+                  <strong>Inscribete  obtendras  nuestra informacion y beneficios</strong>
+                </p>
+              </div>
+              <!--Grid column-->
+      
+              <!--Grid column-->
+              <div class="col-md-5 col-12">
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="email" id="form5Example2" class="form-control" />
+                  <label class="form-label" for="form5Example2">Correo electrónico</label>
+                </div>
+              </div>
+              <!--Grid column-->
+      
+              <!--Grid column-->
+              <div class="col-auto">
+      
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary mb-4">
+                  Subscribirme
+                </button>
+              </div>
+              <!--Grid column-->
+            </div>
+            <!--Grid row-->
+          </form>
+        </section>
+        <!-- Section: Form -->
+      
+      </footer>
+      <!-- Footer -->
+
+   
