--- a/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,76 @@
-<p>navbar works!</p>
+<!-- <h1>TUCODIGO.COM</h1>
+
+<nav>
+	<a href="#">Home</a>
+	<a href="#">Cursos</a>
+	<a href="#">Blog</a>
+	<a href="#">Forum</a>
+	<a href="#">Contact</a>
+	<a href="#">log in</a>
+	<div class="animation start-home"></div>
+</nav>
+
+ -->
+
+
+
+ <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center">
+	<div class="container-fluid ">
+	  <a class="navbar-brand" href="#">
+		<img
+		src="../../../assets/img/logo.jpeg"
+		height="50"
+		alt="MDB Logo"
+		loading="lazy"
+	  />	  
+	  </a>
+	 
+
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="#">Home</a>
+		  </li>
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				Cursos
+			</a>
+			<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <li><a class="dropdown-item" href="#">HTML</a></li>
+			  <li><a class="dropdown-item" href="#">Javascript</a></li>
+			  
+			</ul>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Otros</a>
+		  </li>
+		  
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Contacto</a>
+		  </li>
+		  <li class="nav-item dropdown "><!-- dropdown ventana desplega  opciones abajo -->
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				<img
+				src="../../../assets/img/usuario.png"
+				height="50"
+				alt="MDB Logo"
+				loading="lazy"
+			  />
+				
+			</a>
+			<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <li><a class="dropdown-item" href="#">Inicio de sesion</a></li>
+			  <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+			  
+			</ul>
+		  </li>
+		  <br>
+
+		  
+		</ul>
+	  </div>
+	</div>
+  </nav>
