--- a/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
@@ -1,1 +1,55 @@
-<p>forum works!</p>
+<p>forum works</p>
+<div class="bg-forum pt-5">
+  <div class="container">
+    <div>
+      <h2 class="fs-1" style="color: #ecf00d; border:#328cc1"> <h3></h3></h2>      
+    </div>
+
+    <form #formForum="ngForm" class="m-4">
+      <div class="form-group m-2">
+        <label for="Name" class="fs-5 bg-title" style="color: antiquewhite">Nombre o Usuario</label>
+        <input type="name" class="form-control inputstl" name="forumUser" #forumUser="ngModel"
+          [(ngModel)]="forumService.selectedForum.forumUser">
+      </div>
+      <div class="form-group m-2">
+        <label for="Email1" class="fs-5 bg-title" style="color: antiquewhite">Correo Electrónico</label>
+        <input type="email" class="form-control inputstl" name="forumEmail" #forumEmail="ngModel"
+          [(ngModel)]="forumService.selectedForum.forumEmail">
+      </div>
+      <div class="form-group m-2" class="fs-5 bg-title" style="color: antiquewhite">r
+        <label for="name">Título de tu pregunta</label>
+        <input type="text" class="form-control inputstl" name="forumTitle" #forumTitle="ngModel"
+          [(ngModel)]="forumService.selectedForum.forumTitle">
+      </div>
+      <div class="form-group m-2 fs-5">
+       
+        <textarea name="txtMsg" class="form-control inputstl" placeholder="Escribe aqui Tu pregunta*"
+          style="width: 100%; height: 150px;" name="ForumContent" #ForumContent="ngModel"
+          [(ngModel)]="forumService.selectedForum.ForumContent"></textarea>
+
+      </div>
+
+      <a class="btn btn-warning fs-5" style="color: #1D2731">Registrar pregunta</a>
+
+      <!-- (click)="createForum(formForum)" -->
+    </form>
+  </div>
+
+  <br>
+
+  <section class="mb-5">
+    <h2 class="ms-3 fs-1 bg-title" style="color: #ecf00d">Preguntas anteriores</h2>
+
+    <div class="card m-5 inputstl1" *ngFor="let forum of forumService.forums">
+      <div class="card-body">
+        <h5 class="card-title fs-3" style="color:#328cc1">{{forum.forumTitle}}</h5>
+        <hr>
+        <p class="card-text fs-5">{{forum.ForumContent}}</p>
+        <p class="card-text">Etiquetas: {{forum.forumTags}}</p>
+        <div class="d-flex justify-content-between">
+          <a href="#" class="btn btn-warning" >Ver respuestas</a>
+          <a href="#" class="btn btn-warning" style="color: #1D2731; font-weight: bold;">Haz tu aporte</a>        </div>
+      </div>
+    </div>
+  </section>
+</div>
