[add] few chance

--- a/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.html
@@ -176,7 +176,7 @@
         </button>
         <button
           class="btn btn-light m-2"
-          (click)="resetForm(updateForm)"
+          (click)="resetForm()"
         >
           Cerrar
         </button>
