anexo complementos al home

--- a/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
@@ -30,7 +30,7 @@
             <!-- Instagram -->
             <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram">
               <img
-              src="../../../assets/img/instagran.png.crdownload"
+              src="../../../assets/img/instagram.png"
               height="50"
               alt="MDB Logo"
               loading="lazy"
@@ -71,6 +71,10 @@
          <!-- Section: Form -->
          <section class="">
           <form action="">
+
+
+
+            
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
@@ -78,6 +82,7 @@
                 <p class="pt-2">
                   <strong>Inscribete  obtendras  nuestra informacion y beneficios</strong>
                 </p>
+                
               </div>
               <!--Grid column-->
       
@@ -95,7 +100,7 @@
               <div class="col-auto">
       
                 <!-- Submit button -->
-                <button type="submit" class="btn btn-primary mb-4">
+                <button type="submit" class="btn btn-warning mb-4">
                   Subscribirme
                 </button>
               </div>
@@ -105,8 +110,14 @@
           </form>
         </section>
         <!-- Section: Form -->
+
+        
       
       </footer>
       <!-- Footer -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220"><path fill="#094293" fill-opacity="1" d="M0,128L60,106.7C120,85,240,43,360,37.3C480,32,600,64,720,106.7C840,149,960,203,1080,186.7C1200,171,1320,85,1380,42.7L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+      
 
-   
+
+
+
