--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.css
@@ -4,7 +4,7 @@ body {
 }
 .wrapper {
 	width: 100%;
-	height: 100vh;
+	height: 80vh;
 	overflow: hidden;
 	position: relative;
 	background-color: #000;
@@ -47,14 +47,7 @@ body {
 } 
 
 
-/* .caption {
-	color: rgb(221, 165, 12);
-	text-shadow: 1px 1px black;
-	position: relative;
-	font-size: 75px;
-	margin-top: 2px;
-	
-} */
+
 .titulos {
 
 	align-items: center;
@@ -73,7 +66,7 @@ body {
 
 .burbuja{
     border-radius: 50%;
-    background: #fff;
+    background: rgb(197, 170, 241);
     opacity: .3;
 
     position: absolute;
@@ -191,3 +184,21 @@ body {
         transform: translateY(0);
     }
 }
+
+
+/* cursos */
+.curso{
+    width: 100%;
+	height: 70vh;
+	overflow: hidden;
+	position: relative;
+	background-color: rgb(252, 249, 249);
+    
+}
+.tarjeta{
+    background-color: rgba(84, 66, 247, 0);
+}
+
+
+
+
