--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
@@ -3,7 +3,7 @@
 	<title>Automatic Image Slider in HTML CSS</title>
 	<link href="style.css" rel="stylesheet">
 </head> -->
-<body>
+<body class="tarjeta">
 
 
 
@@ -15,7 +15,7 @@
 
 				<div class="d-flex flex-wrap justify-content-center">
 			
-					<div class="card d-flex " style="width: 700px; ">
+					<div class="card d-flex " style="width: 500px; ">
 						
 						<h1 class="titulos">Desarrolla tus capacidades</h1>
 						<img src="../../../assets/img/imagen2.jpg" class="card-img-down" alt="...">
@@ -36,7 +36,7 @@
 
 				<div class="d-flex flex-wrap justify-content-center">
 			
-					<div class="card" style="width: 700px;">
+					<div class="card" style="width: 500px;">
 						<h1 class="titulos">Aprende con nosotros</h1>
 						<img src="../../../assets/img/codigo.jpg" class="card-img-down" alt="...">
 						
@@ -55,7 +55,7 @@
 
 				<div class="d-flex flex-wrap justify-content-center">
 			
-					<div class="card" style="width: 700px;">
+					<div class="card" style="width: 500px;">
 						<h1 class="titulos">Desarrolla tu ingenio</h1>
 						<img src="../../../assets/img/imagen3.jpg" class="card-img-down" alt="...">
 						
@@ -74,7 +74,7 @@
 
 				<div class="d-flex flex-wrap justify-content-center">
 			
-					<div class="card" style="width: 700px;">
+					<div class="card" style="width: 600px;">
 						<h1 class="titulos">Todos los lenguajes</h1>
 						<img src="../../../assets/img/carusel-1.jpg" class="card-img-down" alt="...">
 						
@@ -93,7 +93,7 @@
 
 				<div class="d-flex flex-wrap justify-content-center">
 			
-					<div class="card" style="width: 700px;">
+					<div class="card" style="width: 600px;">
 						<h1 class="titulos">En un solo lugar</h1>
 						<img src="../../../assets/img/clase.jpg" class="card-img-down" alt="...">
 						
@@ -105,16 +105,24 @@
 		
 		
 		</div>	  
+
+
 	</div> 
-	<div class="d-grid gap-2 ">
-		<button class="btn btn-warning" type="button">Pulsa para iniciar</button>
-		
+	<br>
+
+	<div class="d-grid gap-2 col-12 mx-auto">
+		<button class="btn btn-warning" type="button">Programa tu futuro oprime para empezar</button>
+	
 	  </div>
+	  <br>
+	  
+		
+
 
 	
-
-	<!-- burbujas-->
-
+    
+ 
+ 		<!-- burbujas-->
 	<div class="burbujas">
 		<div class="burbuja"></div>
 		<div class="burbuja"></div>
@@ -127,9 +135,190 @@
 		<div class="burbuja"></div>
 		<div class="burbuja"></div>
 	</div>
-
-
 	
+  
+	  
+  
+
+
+
+
+	<!-- seccion CURSOS -->
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220"><path fill="#094293" fill-opacity="1" d="M0,128L60,106.7C120,85,240,43,360,37.3C480,32,600,64,720,106.7C840,149,960,203,1080,186.7C1200,171,1320,85,1380,42.7L1440,0L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+
+	<section class="container h-auto curso">
+      
+		<div class="mb-5 d-flex justify-content-center align-items-center w-100">
+			<!-- targeta -->
+  
+			<a href="Curso.html#Curso2">
+			  <div class="card card-size wrap-image border border-warning border-5 tarjeta">
+				<div class="row g-0">
+				  <div class="col-md-4">
+					<img
+					  src="../../../assets/img/css.png"
+					  alt="CSS"
+					  class="img-fluid rounded-start h-100"
+					/>
+				  </div>
+				  
+				  <div class="col-md-8 ">
+					<div class="card-body main-card-body">
+
+						
+		
+
+					  <h5 class="card-title">Curso CSS</h5>
+					  <p class="card-text">
+						El objetivo de este sitio es poder aprender CSS en forma sencilla 
+						viendo un concepto teórico, luego algunos ejercicios resueltos y por
+						 último y lo más importante efectuar una serie de ejercicios. 
+						 Puede desarrollar los ejercicios en el sitio, probarlos y ver los resultados.
+					  </p>
+					  <p class="card-text">
+						<small class="text-muted">Ultima actualización 3 min atrás</small>
+						
+					  </p> 
+					  <svg width="250" height="120">
+						<circle cx="-30" cy="60" r="30">
+						<animate id="ejemploSet" attributeName="cx" attributeType="XML" from="-30" to="280" begin="0s; ejemploSet.end" dur="2s" repeatCount="3"></animate>
+								  <set begin="ejemploSet.begin" attributeType="CSS" attributeName="fill" to="blue"></set>	
+								  <set begin="ejemploSet.repeat(1)" attributeType="CSS" attributeName="fill" to="#D9B310"></set>	
+								  <set begin="ejemploSet.repeat(2)" attributeType="CSS" attributeName="fill" to="white"></set>	
+						</circle>
+						</svg>
+							 
+					</div>
+				  </div>
+				</div>    
+			  </div>
+			</a>
+  
+	   
+		 <!--  blob -->
+  
+		 <svg class="col-md-4 main-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+		  <path fill="#D9B310" d="M46.3,-47.2C59.4,-33.1,69.2,-16.5,72.3,3C75.3,22.6,71.5,45.2,58.3,55.4C45.2,65.6,22.6,63.4,5.1,58.3C-12.5,53.3,-25,45.4,-41.5,35.2C-57.9,25,-78.4,12.5,-80.3,-1.9C-82.2,-16.3,-65.5,-32.5,-49,-46.7C-32.5,-60.8,-16.3,-72.9,0.1,-73C16.5,-73.2,33.1,-61.4,46.3,-47.2Z" transform="translate(100 100)" />
+		</svg>
+
+		
+		</div>
+  
+		<div class="mb-5 d-flex justify-content-center align-items-center">
+  
+		  <!-- blop -->
+
+		  
+		  
+			<svg class="col-md-4 main-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+			  <path fill="#D9B310" d="M31.6,-40.2C43.6,-34.8,57.8,-29.1,63.4,-18.9C69.1,-8.7,66.3,6,59.6,17.1C52.8,28.2,42.1,35.7,31.5,45.1C20.9,54.5,10.5,65.7,-3,69.8C-16.4,73.9,-32.8,70.8,-44,61.6C-55.1,52.4,-61,37.1,-66.9,21.2C-72.8,5.3,-78.8,-11.1,-76.6,-27.1C-74.4,-43.1,-64.2,-58.6,-50,-63.3C-35.9,-67.9,-18,-61.6,-4.1,-56C9.8,-50.4,19.7,-45.5,31.6,-40.2Z" transform="translate(100 100)" />
+			</svg>
+		  
+		  <!-- targeta -->
+		  <a href="Curso.html#Curso1">
+			<div class="card card-size tarjeta border border-warning border-5">
+			  <div class="row g-0">
+				<div class="col-md-4">
+				  <img
+					src="../../../assets/img/html.png"
+					alt="HTML"
+					class="img-fluid rounded-start h-100"
+				  />
+				</div>
+				<div class="col-md-8">
+				  <div class="card-body main-card-body">
+					<h5 class="card-title">Curso HTML</h5>
+					<p class="card-text">
+						Con este curso te introducirás en el diseño de páginas web de manera
+						 profesional. En la primera parte del curso aprenderás cómo nació la Web y
+						  cómo ha llegado a ser lo que es hoy. Serás capaz de crear páginas web correctas 
+						  de manera profesional utilizando HTML5.
+					</p>
+					<p class="card-text">
+					  <small class="text-muted">Ultima actualización 3 min atrás</small>
+					</p>
+					<svg width="250" height="120">
+						<circle cx="-30" cy="60" r="30">
+						<animate id="ejemploSet" attributeName="cx" attributeType="XML" from="-30" to="280" begin="0s; ejemploSet.end" dur="2s" repeatCount="3"></animate>
+								  <set begin="ejemploSet.begin" attributeType="CSS" attributeName="fill" to="blue"></set>	
+								  <set begin="ejemploSet.repeat(1)" attributeType="CSS" attributeName="fill" to="#D9B310"></set>	
+								  <set begin="ejemploSet.repeat(2)" attributeType="CSS" attributeName="fill" to="white"></set>	
+						</circle>
+						</svg>
+				
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </a>
+  
+		
+  
+		</div>
+  
+		<div class="mb-5 d-flex justify-content-center align-items-center  ">
+  
+		  <!-- targeta -->
+		  <a href="Curso.html#Curso3">
+			<div class="card card-size tarjeta border border-warning border-5">
+			  <div class="row g-0">
+				<div class="col-md-4 border border-5">
+				  <img
+					src="assets/img/jv.png"
+					alt="Javascript"
+					class="img-fluid rounded-start h-100"
+				  />
+				</div>
+				<div class="col-md-8 ">
+				  <div class="card-body main-card-body">
+					<h5 class="card-title">Curso Javascript</h5>
+					<p class="card-text">
+						En este curso vamos a arrancar desde cero en el lenguaje de programación JavaScript,
+						 para luego ir adentrándonos en su estructura de datos, interacciones, DOM, y mucho más.
+					</p>
+					<p class="card-text">
+					  <small class="text-muted">Ultima actualización 3 min atrás</small>
+					</p>
+					<svg width="250" height="120">
+						<circle cx="-30" cy="60" r="30">
+						<animate id="ejemploSet" attributeName="cx" attributeType="XML" from="-30" to="280" begin="0s; ejemploSet.end" dur="2s" repeatCount="3"></animate>
+								  <set begin="ejemploSet.begin" attributeType="CSS" attributeName="fill" to="blue"></set>	
+								  <set begin="ejemploSet.repeat(1)" attributeType="CSS" attributeName="fill" to="#D9B310"></set>	
+								  <set begin="ejemploSet.repeat(2)" attributeType="CSS" attributeName="fill" to="white"></set>	
+						</circle>
+						</svg>
+				
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </a>
+  
+		
+			<!-- blob -->
+		  <svg class="col-md-4 main-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+			<path fill="#D9B310" d="M23.5,-37.2C31,-26.9,38,-20.8,47.4,-10.9C56.8,-1,68.7,12.6,67,23.1C65.4,33.6,50.4,41.1,37,45.6C23.5,50.1,11.8,51.7,1.3,49.8C-9.1,48,-18.2,42.7,-26.5,36.6C-34.9,30.4,-42.5,23.4,-44.8,14.9C-47.1,6.4,-44.1,-3.5,-44,-17.6C-44,-31.8,-46.9,-50.2,-40.1,-60.7C-33.3,-71.1,-16.6,-73.6,-4.3,-67.7C8,-61.7,16,-47.4,23.5,-37.2Z" transform="translate(100 100)" />
+		  </svg>
+	   
+		</div>
+
+
+
+
+		
+	
+	
+  
+		  
+  
+	  </section>
+	  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220"><path fill="#094293" fill-opacity="1" d="M0,128L60,106.7C120,85,240,43,360,37.3C480,32,600,64,720,106.7C840,149,960,203,1080,186.7C1200,171,1320,85,1380,42.7L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+  
+  
+		<link async href="http://fonts.googleapis.com/css?family=Gochi%20Hand" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
+	
+
+
 
 
 
