--- a/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
@@ -51,7 +51,7 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="#">Contacto</a>
 		  </li>
-		  <li class="nav-item dropdown "><!-- dropdown ventana desplega  opciones abajo -->
+		  <li class="nav-item dropdown ml-auto"><!-- dropdown ventana desplega  opciones abajo -->
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				<img
 				src="../../../assets/img/usuario.png"
@@ -64,7 +64,7 @@
 			<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 			  <li><a class="dropdown-item" href="#">Inicio de sesion</a></li>
 			  <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
-			  
+			  <li><a class="dropdown-item" href="#">Registrarme</a></li>
 			</ul>
 		  </li>
 		  <br>
