--- a/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/footer/footer.component.html
@@ -80,19 +80,15 @@
               <!--Grid column-->
               <div class="col-auto">
                 <p class="pt-2">
-                  <strong>Inscribete  obtendras  nuestra informacion y beneficios</strong>
+                  <strong></strong>
                 </p>
-                
               </div>
               <!--Grid column-->
       
               <!--Grid column-->
               <div class="col-md-5 col-12">
                 <!-- Email input -->
-                <div class="form-outline mb-4">
-                  <input type="email" id="form5Example2" class="form-control" />
-                  <label class="form-label" for="form5Example2">Correo electrónico</label>
-                </div>
+               
               </div>
               <!--Grid column-->
       
@@ -101,7 +97,7 @@
       
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-warning mb-4">
-                  Subscribirme
+                  Contactanos
                 </button>
               </div>
               <!--Grid column-->
@@ -120,4 +116,5 @@
 
 
 
+      
 
