--- a/tuCodigo/tucodigo_front/src/app/Components/contact/contact.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/contact/contact.component.html
@@ -1,1 +1,73 @@
-<p>contact works!</p>
+<div class="container-fluid d-flex justify-content-center bg-bluedark-tucode">
+  <form #contactForm="ngForm" class="main-form p-5 m-5 shadow-lg bg-light rounded animated flipInY">
+    <h2 class="text-center">Fomulario de Contacto</h2>
+    <div class="m-2">
+      <label class="" for="contactName">Nombre</label>
+      <input
+        required="true"
+        class="form-control"
+        type="text"
+        name="contactName"
+        id=""
+        #contactName="ngModel"
+        [(ngModel)]="contactService.selectedContact.contactName"
+      />
+    </div>
+
+    <div class="m-2">
+      <label class="" for="contactEmail">Correo Electronico</label>
+      <input
+        required="true"
+        class="form-control"
+        type="email"
+        name="contactEmail"
+        id=""
+        #contactEmail="ngModel"
+        [(ngModel)]="contactService.selectedContact.contactEmail"
+      />
+    </div>
+
+    <div class="m-2">
+      <label class="" for="contactPhone">Número de teléfono</label>
+      <input
+        required="true"
+        class="form-control"
+        type="number"
+        name="contactPhone"
+        id=""
+        #contactPhone="ngModel"
+        [(ngModel)]="contactService.selectedContact.contactPhone"
+      />
+    </div>
+
+    <div class="m-2">
+      <label class="" for="contactContent ">
+        ¿En que podemos ayudarte?</label
+      >
+      <textarea class="form-control" required="true" name="contactContent" id="" cols="30" rows="8" #contactContent="ngModel"
+      [(ngModel)]="contactService.selectedContact.contactContent"></textarea>
+     <!--  <input
+        required="true"
+        class="form-control content text-start"
+        type="text-tarea"
+        name="contactContent"
+        id=""
+        #contactContent="ngModel"
+        [(ngModel)]="contactService.selectedContact.contactContent"
+      /> -->
+    </div>
+
+    <div class="d-flex align-items-center justify-content-center m-2">
+      <button class="btn btn-warning me-3" (click)="createRequest(contactForm)">
+        Envíar
+      </button>
+      <button class="btn btn-warning" (click)="cleanForm(contactForm)">
+        Limpiar
+      </button>
+    </div>
+  </form>
+
+  <div class="content-bg animated fadeInDown">
+      <!-- img -->
+  </div>
+</div>
