--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
@@ -1,19 +1,25 @@
+.bg-foruma {
+  background-image: url("../../../assets/img/bg-foruma.jpg");
+  background-repeat: repeat;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
 
-.bg-foruma
- {
-    background-image: url("../../../assets/img/bg-foruma.jpg");
-    background-repeat: repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .text-colorTitle {
-      text-decoration-color: bisque;
-  }
-  
-  .bg-title {
-      background-color: #0B3C5D
-      }
+.text-colorTitle {
+  text-decoration-color: bisque;
+}
 
-     
+.bg-title {
+  background-color: #0b3c5d;
+}
+
+.main-form {
+  border-radius: 2px;
+  border: solid 3px #ffc107;
+  position: absolute;
+  margin: auto;
+  width: fit-content;
+  margin-left: 50%;
+  margin-top: 50%;
+ }
