--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
@@ -18,6 +18,7 @@
   border-radius: 2px;
   border: solid 3px #ffc107;
   position: absolute;
+  z-index: 3;
   margin: auto;
   width: fit-content;
   margin-left: 50%;
